--- a/style.css
+++ b/style.css
@@ -77,8 +77,23 @@ button.prev {
 button.next {
     right: 0;
 }
+/* ======================================================================================= */
+/* Estilos para dispositivos móveis */
+@media only screen and (max-width: 768px) {
+    .carousel {
+        width: 100%; /* Ocupar toda a largura disponível */
+    }
 
+    .slide-container img {
+        max-width: 100%;
+        height: auto;
+    }
 
+    button.prev, button.next {
+        padding: 15px; /* Tornar os botões de navegação um pouco maiores para facilitar o toque */
+        font-size: 24px;
+    }
+}
 
 /* ======================================================================================= */
 /* footer */
